--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "web-vitals": "^1.0.1"
   },
   "devDependencies": {
+    "@types/react-redux": "^7.1.19",
     "@typescript-eslint/eslint-plugin": "^4.33.0",
     "@typescript-eslint/parser": "^4.33.0",
     "eslint": "^7.32.0",
